<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/noteTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/note_item"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/noteTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@+id/deleteCheckBox"
        android:layout_toLeftOf="@+id/deleteCheckBox"
        android:ellipsize="end"
        android:text="@string/note_title"
        android:textColor="@color/text"
        android:textSize="22sp"
        android:textStyle="bold">
    </TextView>



    <TextView
        android:id="@+id/noteTagsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noteTitleText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/deleteCheckBox"
        android:layout_toLeftOf="@+id/deleteCheckBox"
        android:text="@string/note_tags"
        android:textColor="@color/black"
        android:textSize="11sp"/>

    <TextView
        android:id="@+id/noteAcidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noteSweetness"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/deleteCheckBox"
        android:layout_toLeftOf="@+id/deleteCheckBox"
        android:text="@string/acidity"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/noteSweetness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noteTagsText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/deleteCheckBox"
        android:layout_toLeftOf="@+id/deleteCheckBox"
        android:text="@string/sweetness"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/noteBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noteAcidity"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/deleteCheckBox"
        android:layout_toLeftOf="@+id/deleteCheckBox"
        android:text="@string/note_balance"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/noteDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noteBalance"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/deleteCheckBox"
        android:layout_toLeftOf="@+id/deleteCheckBox"
        android:text="@string/note_date"
        android:textColor="@color/black"
        android:textSize="11sp"/>

    <CheckBox
        android:id="@+id/deleteCheckBox"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text=" "
        android:visibility="invisible" />
</RelativeLayout>